# bevy-atari-antic

./: .gitignore  Cargo.toml  build_wasm32_example.sh  deploy_test.sh  index.html
7602219/web/: atari_antic.js
examples/: atari_antic.rs
src/: antic.wgsl  antic_data.rs  atari_data.rs  lib.rs  palette.rs  resources.rs
src/render/: antic.wgsl  mod.rs  pass.rs
web/: atari_antic.js
