[package]
edition = "2021"
name = "bevy_atari_antic"
version = "0.1.0"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.7", features=["derive"]}
wgpu = { version = "0.11", features = ["spirv", "webgl"] }
parking_lot = "0.11"
futures-lite = "1.11.3"
crevice = "0"


[dependencies.bevy]
git = "https://github.com/mrk-its/bevy"
branch = "bevy_atari"
# path = "../bevy"
default_features = false
features = ["bevy_core_pipeline", "bevy_render2", "bevy_sprite2", "bevy_winit"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Storage"]}

[[example]]
name = "atari_antic"
path = "examples/atari_antic.rs"

[profile.release]
# opt-level = "z"
# lto = true
# codegen-units = 1

[patch.crates-io]
wgpu = {git="https://github.com/mrk-its/wgpu", branch="master"}
glow = {git="https://github.com/grovesNL/glow"}
naga = {git="https://github.com/gfx-rs/naga", rev="29571cc"}
